data/derived/fa15/progs/unify/prog2757.ml.out
Characters 61-62:
  let fixpoint (f,b) = wwhile ( let n z = (z, b = z(b))  in (n,b));;
                                                               ^
Error: This expression has type 'a but an expression was expected of type
         'a -> 'a
       The type variable 'a occurs inside 'a -> 'a
